objects/Opportunity/fields/Account_Book_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Book_Id__c</fullName>
    <formula>Account.Price_Book__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Book Id</label>
    <type>Text</type>
</CustomField>