objects/Opportunity/fields/Account_Fax__c.field-meta.xml
<CustomField>
    <fullName>Account_Fax__c</fullName>
    <formula>Account.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Fax</label>
    <type>Text</type>
</CustomField>