objects/Opportunity/fields/Accounts_Approved_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Approved_Rejected__c</fullName>
    <label>Accounts Approved/Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>