objects/Opportunity/fields/Actual_GP_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_GP_Margin__c</fullName>
    <label>Actual GP Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>