objects/Opportunity/fields/Actual_GP_Margin_Last_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_GP_Margin_Last_Change_Date__c</fullName>
    <label>Actual GP Margin Last Change Date</label>
    <type>Date</type>
</CustomField>