objects/Opportunity/fields/Actual_GP_Marginn__c.field-meta.xml
<CustomField>
    <fullName>Actual_GP_Marginn__c</fullName>
    <label>Actual GP Margin</label>
    <summarizedField>OpportunityLineItem.GP_Margin__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>