objects/Opportunity/fields/Actual_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Cost__c</fullName>
    <label>Actual Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>