objects/Opportunity/fields/Alt_Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Alt_Delivery_City__c</fullName>
    <inlineHelpText>For the Shipping address to appear on the Delivery Note, please populate all these Shipping fields.</inlineHelpText>
    <label>Shipping City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>