objects/Opportunity/fields/Alt_Delivery_Country__c.field-meta.xml
<CustomField>
    <fullName>Alt_Delivery_Country__c</fullName>
    <defaultValue>&quot;UK&quot;</defaultValue>
    <inlineHelpText>For the Shipping address to appear on the Delivery Note, please populate all these Shipping fields.</inlineHelpText>
    <label>Shipping Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>