objects/Opportunity/fields/Alt_Delivery_PostCode__c.field-meta.xml
<CustomField>
    <fullName>Alt_Delivery_PostCode__c</fullName>
    <inlineHelpText>For the Shipping address to appear on the Delivery Note, please populate all these Shipping fields.</inlineHelpText>
    <label>Shipping Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>