objects/Opportunity/fields/Alt_Delivery_Street__c.field-meta.xml
<CustomField>
    <fullName>Alt_Delivery_Street__c</fullName>
    <inlineHelpText>For the Shipping address to appear on the Delivery Note, please populate all these Shipping fields.</inlineHelpText>
    <label>Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>