objects/Opportunity/fields/Alternative_Invoice_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Invoice_Company_Name__c</fullName>
    <label>Alternative Invoice Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>