objects/Opportunity/fields/Alternative_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>