objects/Opportunity/fields/Alternative_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone_Number__c</fullName>
    <label>Alternative Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>