objects/Opportunity/fields/AmountCredited__c.field-meta.xml
<CustomField>
    <fullName>AmountCredited__c</fullName>
    <label>AmountCredited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>