objects/Opportunity/fields/Amsec__c.field-meta.xml
<CustomField>
    <fullName>Amsec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amsec</label>
    <type>Checkbox</type>
</CustomField>