objects/Opportunity/fields/Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_Status__c</fullName>
    <formula>&quot;PriceList: &quot;&amp;IF(TEXT(Account.Price_List_Correct__c) &lt;&gt; &quot;&quot; , &quot;Yes&quot;, &quot;No &quot; ) &amp;&quot; SageCode: &quot;&amp;IF ( Account.Accounts_Checked_Sage_Code__c  , &quot;Yes&quot; , &quot;No &quot; )&amp;
 &quot;  AccAddOK : &quot; &amp;IF(Account.Accounts_Checked_Address__c , &quot;Yes&quot;, &quot;No &quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Status</label>
    <type>Text</type>
</CustomField>