objects/Opportunity/fields/Colour_Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Colour_Special_Requests__c</fullName>
    <defaultValue>&quot;As Specified on the drawing&quot;</defaultValue>
    <label>Colours / Special Requests</label>
    <type>TextArea</type>
</CustomField>