objects/Opportunity/fields/Conv_Prob__c.field-meta.xml
<CustomField>
    <fullName>Conv_Prob__c</fullName>
    <label>Conv Prob</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>