objects/Opportunity/fields/Copy_Email_for_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Copy_Email_for_Invoice__c</fullName>
    <label>Email for Copy Invoice</label>
    <type>Email</type>
</CustomField>