objects/Opportunity/fields/count_od_line_item__c.field-meta.xml
<CustomField>
    <fullName>count_od_line_item__c</fullName>
    <label>count od line item</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>