objects/Opportunity/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <formula>IF(TEXT(Account.Customer_Status__c)!=null,TEXT(Account.Customer_Status__c),TEXT(Account.Parent.Customer_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>