objects/Opportunity/fields/Customer_Works_Completion_Note__c.field-meta.xml
<CustomField>
    <fullName>Customer_Works_Completion_Note__c</fullName>
    <label>Customer Works Completion Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>