objects/Opportunity/fields/Date_Copy_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Copy_Invoice_Sent__c</fullName>
    <label>Date Copy Invoice Sent</label>
    <type>Date</type>
</CustomField>