objects/Opportunity/fields/Date_Copy_Sheet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Copy_Sheet_Sent__c</fullName>
    <label>Date Copy Certificate Sent</label>
    <type>Date</type>
</CustomField>