objects/Opportunity/fields/Date_last_payment_received__c.field-meta.xml
<CustomField>
    <fullName>Date_last_payment_received__c</fullName>
    <label>Date last payment received</label>
    <type>Date</type>
</CustomField>