objects/Opportunity/fields/Delivered_Margin__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Margin__c</fullName>
    <label>Delivered Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>