objects/Opportunity/fields/Delivered_Value__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Value__c</fullName>
    <label>Delivered Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>