objects/Opportunity/fields/Deliveries_Count__c.field-meta.xml
<CustomField>
    <fullName>Deliveries_Count__c</fullName>
    <label>Deliveries Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>