objects/Opportunity/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <formula>IF(OR(Billing_Street__c &lt;&gt; &apos;&apos;,Billing_City__c &lt;&gt; &apos;&apos;,Billing_State__c &lt;&gt; &apos;&apos;,Billing_Country__c &lt;&gt; &apos;&apos;,Billing_Postal_Code__c &lt;&gt; &apos;&apos;, Alternative_Invoice_Company_Name__c &lt;&gt; &apos;&apos;), 
IF(Alternative_Invoice_Company_Name__c &lt;&gt; &apos;&apos;, Alternative_Invoice_Company_Name__c &amp;BR(), &apos;&apos;) &amp; 
IF(Billing_Street__c &lt;&gt; &apos;&apos;, Billing_Street__c &amp;BR() , &apos;&apos;) &amp; 
IF(Billing_City__c&lt;&gt; &apos;&apos;, Billing_City__c&amp;BR(), &apos;&apos;) &amp; 
IF(Billing_State__c &lt;&gt; &apos;&apos;, Billing_State__c&amp;BR(), &apos;&apos;) &amp; 
IF(Billing_Postal_Code__c &lt;&gt; &apos;&apos;, Billing_Postal_Code__c&amp;BR(), &apos;&apos;) &amp; 
IF( Billing_Country__c &lt;&gt; &apos;&apos;, Billing_Country__c, &apos;&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Address</label>
    <type>Text</type>
</CustomField>