objects/Opportunity/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Note</label>
    <referenceTo>Delivery_Note__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>