objects/Opportunity/fields/Drawing_Number_Related_to_this_contact__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Number_Related_to_this_contact__c</fullName>
    <label>Drawing Number Related to this Contract</label>
    <type>TextArea</type>
</CustomField>