objects/Opportunity/fields/Email_for_Copy_SS_RS_SW__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Copy_SS_RS_SW__c</fullName>
    <label>Email for Copy Certificate</label>
    <type>Email</type>
</CustomField>