objects/Opportunity/fields/Engineer_Completed_Service__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Completed_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engineer Completed Service</label>
    <type>Checkbox</type>
</CustomField>