objects/Opportunity/fields/ExpectedPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedPaymentDate__c</fullName>
    <label>ExpectedPaymentDate</label>
    <type>Date</type>
</CustomField>