objects/Opportunity/fields/FullyPaidOnDate__c.field-meta.xml
<CustomField>
    <fullName>FullyPaidOnDate__c</fullName>
    <label>FullyPaidOnDate</label>
    <type>Date</type>
</CustomField>