objects/Opportunity/fields/GP_Margin_Margin_Sales__c.field-meta.xml
<CustomField>
    <fullName>GP_Margin_Margin_Sales__c</fullName>
    <formula>IF(Overall_Margin__c   &lt;&gt; 0, Overall_Margin__c  /  Total_Sales_Price__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP Margin % (Margin/Sales)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>