objects/Opportunity/fields/GP_Percentage__c.field-meta.xml
<CustomField>
    <fullName>GP_Percentage__c</fullName>
    <formula>(    GP_Value__c    /  Total_Sales_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>