objects/Opportunity/fields/GP_Value__c.field-meta.xml
<CustomField>
    <fullName>GP_Value__c</fullName>
    <formula>Total_Sales_Price__c -   Total_Product_Cost_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>