objects/Opportunity/fields/HQ_Invoice_Email_To__c.field-meta.xml
<CustomField>
    <fullName>HQ_Invoice_Email_To__c</fullName>
    <label>HQ Invoice Email To</label>
    <type>Email</type>
</CustomField>