objects/Opportunity/fields/Introducer__c.field-meta.xml
<CustomField>
    <fullName>Introducer__c</fullName>
    <label>Introducer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>