objects/Opportunity/fields/InvNumber__c.field-meta.xml
<CustomField>
    <fullName>InvNumber__c</fullName>
    <label>InvNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>