objects/Opportunity/fields/Invoice_Date_new__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_new__c</fullName>
    <formula>if( ISBLANK(Opportunity_Created_Date__c) ,DATEVALUE(CreatedDate),Opportunity_Created_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date new</label>
    <type>Date</type>
</CustomField>