objects/Opportunity/fields/Invoice_Email_To__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_To__c</fullName>
    <formula>IF( Service_Sheet__r.Name  &lt;&gt; Null, Service_Sheet__r.Invoice_Email_To__c ,  Account.Invoice_Email_To__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Email To</label>
    <type>Text</type>
</CustomField>