objects/Opportunity/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <formula>HYPERLINK(&quot;https://eclipse-dental--unifier.sandbox.my.salesforce.com/&quot;+ Id ,  Invoice_Number__c , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice No</label>
    <type>Text</type>
</CustomField>