objects/Opportunity/fields/Invoice_PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PDF_Name__c</fullName>
    <formula>&quot;Invoice &quot;&amp;Account.Name&amp;&quot; &quot;&amp;Sage_Invoice_Number__c &amp;&quot; &quot;&amp; Sage_Invoice_ddmmyyyy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice PDF Name</label>
    <type>Text</type>
</CustomField>