objects/Opportunity/fields/Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>