objects/Opportunity/fields/Invoice_Sent_to_Xero__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent_to_Xero__c</fullName>
    <formula>IF(ISBLANK(XeroOppId__c),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Sent to Xero</label>
    <type>Checkbox</type>
</CustomField>