objects/Opportunity/fields/Invoice_To_Different_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Different_Email__c</fullName>
    <label>Invoice To Different Email</label>
    <type>Email</type>
</CustomField>