objects/Opportunity/fields/Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total__c</fullName>
    <formula>ROUND(Amount,2)+Total_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Including VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>