objects/Opportunity/fields/Invoice_Year__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Year__c</fullName>
    <formula>Text(YEAR(Invoice_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Year</label>
    <type>Text</type>
</CustomField>