objects/Opportunity/fields/InvoiceEmailTo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEmailTo__c</fullName>
    <label>Invoice Email To</label>
    <type>Email</type>
</CustomField>