objects/Opportunity/fields/Last_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Delivery_Date__c</fullName>
    <label>Last Delivery Date</label>
    <type>Date</type>
</CustomField>