objects/Opportunity/fields/Last_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_No__c</fullName>
    <label>Last Invoice No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>