objects/Opportunity/fields/LatestDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>LatestDeliveryDate__c</fullName>
    <label>LatestDeliveryDate</label>
    <type>Date</type>
</CustomField>