objects/Opportunity/fields/LatestDeliveryNo__c.field-meta.xml
<CustomField>
    <fullName>LatestDeliveryNo__c</fullName>
    <label>LatestDeliveryNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>