objects/Opportunity/fields/LatestInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>LatestInvoiceDate__c</fullName>
    <label>LatestInvoiceDate</label>
    <type>Date</type>
</CustomField>