objects/Opportunity/fields/LatestInvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>LatestInvoiceNo__c</fullName>
    <label>LatestInvoiceNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>