objects/Opportunity/fields/Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Lost_Date__c</fullName>
    <label>Lost Date</label>
    <type>Date</type>
</CustomField>