objects/Opportunity/fields/Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Lost_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lost To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type_New__c</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>