objects/Opportunity/fields/Lost_To_HS__c.field-meta.xml
<CustomField>
    <fullName>Lost_To_HS__c</fullName>
    <label>Lost To HS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>