objects/Opportunity/fields/Manually_Sage_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Manually_Sage_Invoiced__c</fullName>
    <inlineHelpText>If this is chosen as Yes  it indicates that this invoice was manually handled. Salesforce will not send an invoice. If this is no, and the above is ticked, it WILL send.  This over-rides the field above.</inlineHelpText>
    <label>Manually/Sage Invoiced</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>