objects/Opportunity/fields/Mark_Up_Margin_Cost__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_Margin_Cost__c</fullName>
    <formula>IF(Overall_Margin__c   &lt;&gt; 0, Overall_Margin__c  /  Total_Product_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark Up (Margin/Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>