objects/Opportunity/fields/Mechanical_Service_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Service_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mechanical Service Sheet</label>
    <referenceTo>Mechanical_Service_Sheet__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>