objects/Opportunity/fields/Modx_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Modx_Order_Number__c</fullName>
    <label>Modx Order  Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>