objects/Opportunity/fields/Modx_Sales_Number__c.field-meta.xml
<CustomField>
    <fullName>Modx_Sales_Number__c</fullName>
    <label>Modx Sales Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>