objects/Opportunity/fields/ModxInvoice__c.field-meta.xml
<CustomField>
    <fullName>ModxInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ModxInvoice</label>
    <type>Checkbox</type>
</CustomField>