objects/Opportunity/fields/MSS_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>MSS_Service_Type__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>