objects/Opportunity/fields/On_Budget__c.field-meta.xml
<CustomField>
    <fullName>On_Budget__c</fullName>
    <label>On Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>