objects/Opportunity/fields/Opp_Type2__c.field-meta.xml
<CustomField>
    <fullName>Opp_Type2__c</fullName>
    <formula>TEXT(Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Type2</label>
    <type>Text</type>
</CustomField>