objects/Opportunity/fields/Opportunity_Number_new__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number_new__c</fullName>
    <formula>Invoice_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>