objects/Opportunity/fields/OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Sale</label>
    <type>AutoNumber</type>
</CustomField>