objects/Opportunity/fields/Ordered_Margin__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Margin__c</fullName>
    <label>Ordered Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>