objects/Opportunity/fields/Other_Product_Qty__c.field-meta.xml
<CustomField>
    <fullName>Other_Product_Qty__c</fullName>
    <label>Other Product Qty</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_Other_Product__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>