objects/Opportunity/fields/Outstanding_Margin__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Margin__c</fullName>
    <label>Outstanding Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>