objects/Opportunity/fields/Overall_Margin__c.field-meta.xml
<CustomField>
    <fullName>Overall_Margin__c</fullName>
    <label>Overall Margin</label>
    <summarizedField>OpportunityLineItem.Margin__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>